fix: add scrollbar-gutter

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
 }
 html {
   scroll-behavior: smooth;
+  scrollbar-gutter: stable;
 }
 ::-webkit-scrollbar {
   width: 4px;
